@@ -7,18 +7,17 @@ import com.tagstory.api.domain.comment.dto.request.UpdateCommentRequest;
 import com.tagstory.api.domain.comment.dto.response.CommentCountResponse;
 import com.tagstory.api.domain.comment.dto.response.CommentResponse;
 import com.tagstory.api.domain.comment.dto.response.CommentWithRepliesResponse;
+import com.tagstory.core.domain.comment.service.Comment;
 import com.tagstory.core.domain.comment.service.CommentFacade;
-import com.tagstory.core.domain.comment.service.dto.Comment;
 import com.tagstory.core.domain.comment.service.dto.response.CommentWithReplies;
 import com.tagstory.core.utils.api.ApiResult;
 import com.tagstory.core.utils.api.ApiUtils;
+import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.*;
 
-import jakarta.validation.Valid;
 import java.util.List;
-import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
 import java.util.stream.Collectors;
 
@@ -31,17 +30,17 @@ public class CommentController {
     /*
      * 댓글을 작성한다.
      */
-    @PreAuthorize("hasRole('ROLE_USER')")
+    @PreAuthorize("hasRole('USER')")
     @PostMapping
     public ApiResult<CommentResponse> create(@RequestBody @Valid CreateCommentRequest request, @CurrentUserId Long userId) throws ExecutionException, InterruptedException {
-        CompletableFuture<Comment> comment = commentFacade.create(request.toCommand(userId));
+        Comment comment = commentFacade.create(request.toCommand(userId));
         return ApiUtils.success(CommentResponse.from(comment));
     }
 
     /*
      * 댓글을 수정한다.
      */
-    @PreAuthorize("hasRole('ROLE_USER')")
+    @PreAuthorize("hasRole('USER')")
     @PatchMapping
     public ApiResult<CommentResponse> update(@RequestBody @Valid UpdateCommentRequest request) {
         Comment comment = commentFacade.update(request.toCommand());
@@ -51,7 +50,7 @@ public class CommentController {
     /*
      * 댓글을 삭제한다.
      */
-    @PreAuthorize("hasRole('ROLE_USER')")
+    @PreAuthorize("hasRole('USER')")
     @PatchMapping("/status/{commentId}")
     public ApiResult<Void> delete(@PathVariable("commentId") Long commentId) {
         commentFacade.delete(commentId);
@@ -72,7 +71,7 @@ public class CommentController {
      * 댓글에 대한 권한을 확인한다.
      * @return 사용자가 작성한 댓글의 아이디
      */
-    @PreAuthorize("hasRole('ROLE_USER')")
+    @PreAuthorize("hasRole('USER')")
     @GetMapping("/auth/{boardId}")
     public ApiResult<List<Long>> getUserCommentId(@PathVariable("boardId") String boardId, @CurrentUserId Long userId) {
         List<Long> commentIdList = commentFacade.getUserCommentId(boardId, userId);
@@ -92,7 +91,7 @@ public class CommentController {
     /*
      * 답글을 작성한다.
      */
-    @PreAuthorize("hasRole('ROLE_USER')")
+    @PreAuthorize("hasRole('USER')")
     @PostMapping("/replies")
     public ApiResult<CommentResponse> createReply(@RequestBody @Valid CreateReplyRequest request, @CurrentUserId Long userId) {
         Comment comment = commentFacade.createReply(request.toCommand(userId));
@@ -106,6 +105,6 @@ public class CommentController {
     public ApiResult<List<CommentResponse>> getReplyList(@PathVariable("parentId") Long parentId,
                                                          @PathVariable("page") int page) {
         List<Comment> commentList = commentFacade.getReplyList(parentId, page);
-        return ApiUtils.success(commentList.stream().map(CommentResponse::from).collect(Collectors.toList()));
+        return ApiUtils.success(commentList.stream().map(CommentResponse::from).toList());
     }
 }
