@@ -1,30 +1,26 @@
 package com.tagstory.core.domain.comment.service;
 
-import com.tagstory.core.domain.board.dto.response.Board;
+import com.tagstory.core.domain.board.service.Board;
 import com.tagstory.core.domain.comment.CommentEntity;
 import com.tagstory.core.domain.comment.CommentStatus;
 import com.tagstory.core.domain.comment.repository.CommentRepository;
-import com.tagstory.core.domain.comment.service.dto.Comment;
 import com.tagstory.core.domain.comment.service.dto.command.CreateCommentCommand;
 import com.tagstory.core.domain.comment.service.dto.command.CreateReplyCommand;
 import com.tagstory.core.domain.comment.service.dto.command.UpdateCommentCommand;
 import com.tagstory.core.domain.comment.service.dto.response.CommentWithReplies;
-import com.tagstory.core.domain.notification.NotificationType;
-import com.tagstory.core.domain.notification.service.Notification;
-import com.tagstory.core.domain.user.service.dto.response.User;
+import com.tagstory.core.domain.event.publisher.CommonEventPublisher;
+import com.tagstory.core.domain.user.service.User;
 import com.tagstory.core.exception.CustomException;
 import com.tagstory.core.exception.ExceptionCode;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 @Service
 @Slf4j
@@ -32,16 +28,7 @@ import java.util.stream.Collectors;
 @Transactional(readOnly = true)
 public class CommentService {
     private final CommentRepository commentRepository;
-    private final ApplicationEventPublisher eventPublisher;
-
-    @Transactional
-    public CompletableFuture<Comment> createWithNotification(Board board, User user, CreateCommentCommand command) {
-        return CompletableFuture.supplyAsync(() -> create(board, user, command))
-                .thenApplyAsync(comment -> {
-                    onEvent(user, board);
-                    return comment;
-                });
-    }
+    private final CommonEventPublisher eventPublisher;
 
     @Transactional
     public Comment create(Board board, User user, CreateCommentCommand command) {
@@ -49,6 +36,10 @@ public class CommentService {
         commentEntity.addUser(user.toEntity());
         commentEntity.addBoard(board.toEntity());
 
+        /* 댓글 작성자가 글쓴이가 아닌 경우에만 알림 이벤트를 발행한다. */
+        if(!isWriter(user, board)) {
+            eventPublisher.onEventFromComment(user, board);
+        }
         return commentRepository.save(commentEntity).toComment();
     }
 
@@ -75,12 +66,13 @@ public class CommentService {
                 .map(comment -> {
                     return CommentWithReplies.of(comment, comment.getChildren());
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<Long> getUserCommentId(String boardId, Long userId) {
         return getCommentListByBoardIdAndUserId(boardId, userId)
-                .stream().map(Comment::getCommentId).collect(Collectors.toList());
+                .stream().map(Comment::getCommentId)
+                .toList();
     }
 
 
@@ -105,7 +97,6 @@ public class CommentService {
     }
 
 
-
     /*
      * 단일 메소드
      */
@@ -120,18 +111,19 @@ public class CommentService {
     }
 
     private List<Comment> findCommentListByBoardId(String boardId, int page) {
-         Page<CommentEntity> commentEntityList = commentRepository
-                 .findByStatusAndParentIsNullAndBoardEntity_BoardIdOrderByCommentIdDesc(CommentStatus.POST, boardId, PageRequest.of(page, 20))
-                 .orElse(Page.empty());
+        Page<CommentEntity> commentEntityList = commentRepository
+                .findByStatusAndParentIsNullAndBoardEntity_BoardIdOrderByCommentIdDesc(CommentStatus.POST, boardId, PageRequest.of(page, 20))
+                .orElse(Page.empty());
 
-         return commentEntityList.stream()
-                 .map(CommentEntity::toComment)
-                 .collect(Collectors.toList());
+        return commentEntityList.stream()
+                .map(CommentEntity::toComment)
+                .toList();
     }
 
     private List<Comment> getCommentListByBoardIdAndUserId(String boardId, Long userId) {
         return commentRepository.findByBoardEntity_BoardIdAndUserEntity_UserId(boardId, userId)
-                .stream().map(CommentEntity::toComment).collect(Collectors.toList());
+                .stream().map(CommentEntity::toComment)
+                .toList();
     }
 
     private List<Comment> getReplyListByParentComment(Comment parentComment, int page) {
@@ -140,14 +132,10 @@ public class CommentService {
 
         return replyList.stream()
                 .map(CommentEntity::toComment)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    private void onEvent(User user, Board board) {
-        eventPublisher.publishEvent(Notification.onEvent(user,
-                board.getUser(),
-                NotificationType.COMMENT,
-                board.getBoardId()
-        ));
+    private boolean isWriter(User user, Board board) {
+        return Objects.equals(board.getUser().getUserId(), user.getUserId());
     }
 }
