@@ -1,13 +1,12 @@
 package com.tagstory.core.domain.comment.service.dto.response;
 
 import com.tagstory.core.domain.comment.CommentStatus;
-import com.tagstory.core.domain.comment.service.dto.Comment;
+import com.tagstory.core.domain.comment.service.Comment;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Getter;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Getter
 @Builder
@@ -19,7 +18,7 @@ public class CommentWithReplies {
     public static CommentWithReplies of(Comment comment, List<Comment> children) {
         children = children.stream()
                 .filter(child -> CommentStatus.POST == child.getStatus())
-                .collect(Collectors.toList());
+                .toList();
 
         return CommentWithReplies.builder()
                 .comment(comment)
